--- a/crates/wasm-mock-util/Cargo.toml
+++ b/crates/wasm-mock-util/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wapc-guest = "0.4.0"
+wapc-guest = {git = "https://github.com/wasmmock/wapc-rs"}
 bytes = "1.0.0"
 prost = "0.7.0"
 prost-types = "0.7"
