--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,10 @@ name = "v2"
 path = "examples/http_fiddler/v2.rs"
 
 [[example]]
+name = "http_req_v2"
+path = "examples/automation/http_req_v2.rs"
+
+[[example]]
 name = "v3"
 path = "examples/http_fiddler/v3.rs"
 
